# pychess

./: .gitignore  .hgignore  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  AGENTS.md  ARTISTS  ASYMMETRIC_TIME_CONTROLS_SUMMARY.md  AUTHORS  Background.py  BoardControl.py  BoardView.py  BookCellRenderer.py  CairoBoard.py  ChessClock.py  DOCUMENTERS  Game.py  INSTALL  INSTALL_MACOS  MANIFEST.in  PKG-INFO  PyChess Philidor.launch  PyChess.launch  PyChess.py  README  README.md  TESTING  TRANSLATORS  ToggleComboBox.py  announcements.py  appveyor.yml  create-engine-win.bat  create-engine.sh  create_deb.sh  create_rpm_py26.sh  create_rpm_py27.sh  create_rpm_py310.sh  create_rpm_py311.sh  create_rpm_py312.sh  (+37 more)
.github/: dependabot.yml
.tx/: config
Players/: CECP.py  Crafty.py  Engine.py  GlobalEngine.py  GnuChess.py  Human.py  Player.py  PyChess.py  __init__.py  engines.py
Savers/: Epd.py  Format.py  epd.py  pgn.py
System/: Log.py  LogDialog.py  ThreadPool.py  TipOfTheDay.py  myconf.py  tsqlite.py
Utils/: Board.py  Cord.py  Game.py  History.py  Log.py  Move.py  Oracle.py  Piece.py  book.py  const.py  eval.py  open.db  protoopen.py  validator.py
code.google.com/: com1.xml  gc23.xml  j10.js  kom1.js  kom1.xml  s3.js  t6.xml
debian/: changelog  control  copyright  files  manpages  menu  pychess.1  pychess.postinst.debhelper  pychess.prerm.debhelper  pychess.substvars  pychess.xpm  rules  watch
doc/: PyChess Action Model.dia  UML.dia  createDoc  index.html  pychess.Players.Engine.html  pychess.Players.Human.html  pychess.Players.ICS.html  pychess.Players.Player.html  pychess.Players.PyChess.html  pychess.Players.UCI.html  pychess.Players.__init__.html  pychess.Players.html  pychess.Players.test.html  pychess.Savers.ChessFile.html  pychess.Savers.__init__.html  pychess.Savers.html  pychess.System.LimitedDict.html  pychess.System.Log.html  pychess.System.LogDialog.html  pychess.System.ThreadPool.html  pychess.System.TipOfTheDay.html  pychess.System.WidgetDic.html  pychess.System.__init__.html  pychess.System.conf_configParser.html  pychess.System.conf_gconf.html  pychess.System.html  pychess.System.myconf.html  pychess.System.protoopen.html  pychess.System.tsqlite.html  pychess.Utils.Board.html  pychess.Utils.Cord.html  pychess.Utils.Game.html  pychess.Utils.History.html  pychess.Utils.Move.html  pychess.Utils.Piece.html  pychess.Utils.TranspositionTable.html  pychess.Utils.__init__.html  pychess.Utils.book.html  pychess.Utils.const.html  pychess.Utils.eval.html  (+20 more)
docs/: Makefile  conf.py  features.rst  index.rst  links_names.txt  make.bat  (+21 more)
(+698 files in other folders)
